--- a/style.css
+++ b/style.css
@@ -4,46 +4,48 @@ header {
 
 }
 
+body {
+    text-align: center;
+}
+
 div { 
     font-size: 150%;
+    width: 200px;
+    height: 100px;
     text-align: center;
     margin: 10px;
     display: inline-block;
 }
 .a1 { 
     background-color: aqua;
-    width: 200px;
-    height: 100px;
+
 }
 
 .a2 { 
     background-color: blue;
-    width: 200px;
-    height: 100px;
+
 }
 
 .a3 { 
     background-color: rgb(102, 210, 30);
-    width: 200px;
-    height: 100px;
+
 }
 
 .a4 { 
     background-color: crimson;
-    width: 200px;
-    height: 350px;
-    display: block;
+
 }
 
-@media screen and (max-width: 700px) {
-        .a3 {
-            display: block;
-            height: 350px;
-            float: left;
+@media screen and (max-width: 683px) {
+        div {
+            width: 150px;
+            height: 150px;
         }
-        .a4 {
-            display: inline;
-            
+    }
+    @media screen and (max-width: 360px) {
+        div {
+            width: 150px;
+            height: 200px;
         }
     }
 
