--- a/style.css
+++ b/style.css
@@ -1,51 +1,75 @@
 header {
-    background-color: chartreuse;
+    padding: 10px 20px;
+    grid-area: header;
+    background-color: bisque;
+  }
+  .main {
+    grid-area: main;
+    background-color: bisque;
+  }
+  .sidebar {
+    padding: 10px 20px;
+    grid-area: sidebar;
+    background-color: bisque;
+  }
+  footer {
+    padding: 10px 20px;
+    grid-area: footer;
+    background-color: bisque;
+  }
+
+  .main-text {
+      padding: 10px 20px;
+  }
+  .headh {
     text-align: center;
-
+  }
+  
+body{
+    background-color: rgb(204, 204, 204);
 }
+  .container {
+    background-color: rgb(204, 204, 204);
+    display: grid;
+    
+   
+    grid-template-columns: 3fr 1fr;
 
-body {
-    text-align: center;
-}
 
-div { 
-    font-size: 150%;
-    width: 200px;
-    height: 100px;
-    text-align: center;
-    margin: 10px;
-    display: inline-block;
-}
-.a1 { 
-    background-color: aqua;
+    grid-template-areas: 
+      "header header"
+      "main sidebar"
+      "footer footer";
+  
+    /* Интервал между ячейками сетки */
+    grid-gap: 60px;
+  }
 
-}
-
-.a2 { 
-    background-color: blue;
-
-}
-
-.a3 { 
-    background-color: rgb(102, 210, 30);
-
-}
-
-.a4 { 
-    background-color: crimson;
-
-}
-
-@media screen and (max-width: 683px) {
-        div {
-            width: 150px;
-            height: 150px;
-        }
-    }
-    @media screen and (max-width: 360px) {
-        div {
-            width: 150px;
-            height: 200px;
-        }
-    }
+  /*
+Форма обратной связи
+*/
+#inline {
+    margin-left:30px;
+    width:80%;
+    margin:0 auto;
+    background:#FFF;
+    padding:10px 20px;
+ }
+ .txt {
+    display:inline-block;
+    color:#676767;
+    width:50%;
+    margin-bottom:10px;
+    padding:5px 9px;
+    font-size:15px;
+ }
+ .txtarea {
+    display:inline-block;
+    color:#676767;
+    width:80%;
+    margin-bottom:10px;
+    padding:5px 9px;
+    font-size:15px;
+    height:80px;
+ }
 
